--- a/css/style.css
+++ b/css/style.css
@@ -3,80 +3,130 @@
     margin: 0;
     padding: 0;
     font-family: 'Product Sans', sans-serif;
+    box-sizing: border-box;
 }
-#banner{
-    background-color: #183a1d;
-    padding-top: 150px;
-    padding-bottom: 150px;
+a{
+    text-decoration: none;
+    color: #3d3939;
+    font-weight: bold;
 }
-#banner h1{
-    color: #fff;
+body{
+    width: 100%;
+    background: #eee;
+}
+#header{
+    display: flex;
+    justify-content: space-between;
+    margin: 30px;
+    position: fixed;
+    top:0;
+    left: 0;
+}
+
+
+#header-img {
+    width: 100%;
+    height: 100%;
+    max-width: 300px;
+    /*margin-left: 20px;*/
+}
+#nav-bar{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position:fixed;
+    top:27px;
+    right:0;
+}
+h1.entete{
+    font-size: 1.5rem;
+    font-weight: bold;
     text-align: center;
+    margin-top: 100px;
 }
-#banner span{
-    color: orange;
+#form{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 30px;
 }
-#banner p{
-    color: #fff;
-    text-align: center;
-}
-#banner .form{
-    margin-top: 50px;
-}
-#banner input{
-    width: 400px;
-    border: none;
-    border-radius: 40px 0px 0px 40px;
-    padding: 15px;
-}
-#banner button{
-    width: 100px;
-    border: none;
-    border-radius: 0px 40px 40px 0px;
-    padding: 15px;
-    background-color: orange;
-}
-#about {
-    margin-top: 80px;
-    margin-bottom: 80px;
-}
-#about span{
-    color: #fff;
-    font-size: 30px;
+#form #email{
+    flex:0 0 100%;
+    width: 350px;
     margin-bottom: 10px;
-    background-color: #183a1d;
-    padding: 13px;
 }
-#about .box{
-    padding: 20px;
-    box-shadow: 3px 3px 31px -9px rgba(0,0,0,0.08);
+#form #submit{
+    flex:0 0 100%;
+    margin-bottom: 10px;
+    width:150px;
+    padding: 5px;
+    background: #f1c40f;
+    font-weight: bold;
+    border: 0;
+    text-transform: uppercase;
 }
-#pricing h2{
-    color:#fff;
+#features, #howItWorks, #pricing {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-left: 150px;
 }
-#pricing{
-    margin-top: 80px;
-    background-color: #183a1d;
-    padding-top: 50px;
-    padding-bottom: 50px;
+
+ i.fa{
+    display: block;
+    width: 60px;
+    height: 60px;
+    font-size: 60px;
+    color:#f1c40f;
+    margin-right: 50px;
 }
-#pricing button{
-    border: none;
-    padding: 15px;
-    color: #000;
-    background-color: orange;
+.text{
+    text-align: justify;
 }
-#pricing .card-header{
-    background-color: #fff;
+#footer{
+    width: 80%;
+    margin: auto;
+    background: rgba(92, 218, 240, 0.404);
+    text-align: right;
+    padding: 5px;
+    padding-right: 30px;
 }
-@media only screen and (max-width: 600px) {
-    #banner input{
+#footer ul{
+    display: flex;
+    justify-content: flex-end;
+}
+#iframe{
+    text-align: center;
+}
+#footer ul li{
+    width: auto;
+    padding: 2px;
+    list-style: none;
+}
+@media only screen and (max-width: 675px) {
+    #header{
+        display: block;
+    }
+    #header-img {
         width: 100%;
-        border-radius: 40px;
+        height: 100%;
+        /*margin-left: 20px;*/
     }
-    #banner button{
-        width: 50%;
-        border-radius: 40px;
-        margin-top: 30px;
+    #nav-bar{
+        display: block;
+        border:solid 1px pink;
+        margin-left:25px;
+        padding-left: 50px;
+        margin-top: 50px;
+        width: 100%;
+        background: rgba(255, 192, 203, 0.164);
+        text-transform: uppercase;
+        
     }
+    h1.entete{
+        margin-top: 210px;
+
+    }
+    
   }
